2003-07-23  root  <root@gills.dancysoft.com>

	* SMTP delivery:  Now uses a single SMTP session for delivery of a
	message for recipients at the particular domain.  I had avoided
	adding this complexity but it was necessary to avoid recipients
	getting multiple copies of a message.   [Lotsa new code here
	<scary noises>]

	* Program alias delivery: Removed requirement that programs use on
	the right-hand side of aliases must be owned by root.  That's too
	restrictive.

	* Added a consistent syslog entry when a mail is received from any
	source (SMTP or stdin).  Message ID is included to help tracking a
	message.  


2003-07-22  root  <root@gills.dancysoft.com>

	* greylist.cl: *greylist-db-host* variable for specifying the
	mysql host.  Default is "localhost".  Useful for shared database.
	Also, use "lock tables..." when updating a triple to avoid
	concurrency problems.
	
2003-07-21  Ahmon Dancy  <dancy@dancy>

	* greylist.cl:  From Evan Harris' latest greylist announcement:

	" - Discovered postfix normally uses <postmaster@some.domain> for
	its envelope from address when doing SMTP callbacks.  Changed
	milter to treat any email from postmaster@ as a callback and delay
	the tempfail until after the DATA phase."

	Made the corresponding change in maild.  

2003-07-09  root  <root@gills.dancysoft.com>

	* Don't do HELO domain check if connection is from localhost.

	* SMTP server statistics are stored in a file so they can be read
	back in during future server restarts.

2003-07-08  Kevin Layer  <layer@relay.known.net>

	* smtp-server.cl:
	- small bug fix to format call
	- have a non-nil and non-t value of *helo-must-match-ip* means
	  just log, don't really reject (unless problems resolving the
	  domain are found) the connection.  It's useful for seeing what
	  would happen if you set the variable to `t'.
	* config.cl: doc changes to *helo-must-match-ip*
	...add CVS Id to all .cl files

2003-07-08  Ahmon Dancy  <dancy@dancy>
