@@ -1,0 +1,5 @@
+(in-package :user)
+
+(defparameter *allegro-maild-version* "v1.0")
+
+
